--- a/action.yml
+++ b/action.yml
@@ -2,9 +2,9 @@ name: 'Setup Julia environment'
 description: 'Setup a Julia environment and add it to the PATH'
 author: 'Sascha Mann'
 inputs: 
-  version:
+  julia-version:
     description: 'The Julia version to download (if necessary) and use. Example: 1.0.4'
-    default: '1.0.4'
+    default: '1.2.0'
   arch:
     description: 'Architecture of the Julia binaries. Defaults to x64.'
     required: false
